syntax = "proto3";

option java_package = "org.acme.work_order.grpc";
option java_outer_classname = "WorkOrderData";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto"; //for stringValue
import "google/protobuf/timestamp.proto"; //for dates

message WorkOrderRequest {
  string woNumber = 1;
  repeated WoJob woJobs = 2;
  string jobTypeCode = 3;
  string address = 4;
  string city = 5;
  google.protobuf.Timestamp woCreationDate = 6;
  google.protobuf.Timestamp woCompletionDate = 7;
  string clientId = 8;
  string appliedRule = 9;
}

message WorkOrderResponse {
  string woNumber = 1;
  repeated WoJob woJobs = 2;
  string jobTypeCode = 3;
  string address = 4;
  string city = 5;
  google.protobuf.Timestamp woCreationDate = 6;
  google.protobuf.Timestamp woCompletionDate = 7;
  string clientId = 8;
  string appliedRule = 9;
}

message WoJob {
  string woNumber = 1;
  string jobCode = 2;
  int32 quantity = 3;
  string activeStatus = 4;
  string appliedRule = 5;
}

service WorkOrderService {
  rpc runRulesToWO(WorkOrderRequest) returns (WorkOrderResponse) {}
}